@@ -20,6 +20,7 @@ export(formant_app)
 export(gaussianSmooth2D)
 export(generateNoise)
 export(getEntropy)
+export(getEnv)
 export(getIntegerRandomWalk)
 export(getLoudness)
 export(getPrior)
